@@ -39,6 +39,7 @@ import org.apache.cayenne.modeler.util.CayenneTable;
 import org.apache.cayenne.modeler.util.PanelFactory;
 import org.apache.cayenne.modeler.util.UIUtil;
 import org.apache.cayenne.modeler.util.combo.AutoCompletion;
+import org.apache.cayenne.swing.components.LimitedTextField;
 
 import javax.swing.JComboBox;
 import javax.swing.JPanel;
@@ -179,6 +180,14 @@ public class DbEntityAttributePanel extends JPanel implements DbEntityDisplayLis
         AutoCompletion.enable(comboBox);
 
         col.setCellEditor(Application.getWidgetFactory().createCellEditor(comboBox));
+
+        TableColumn lengthColumn = table.getColumnModel().getColumn(model.lengthColumnId());
+        LimitedTextField limitedLengthField = new LimitedTextField(10);
+        lengthColumn.setCellEditor(Application.getWidgetFactory().createCellEditor(limitedLengthField));
+
+        TableColumn scaleColumn = table.getColumnModel().getColumn(model.scaleColumnId());
+        LimitedTextField limitedScaleField = new LimitedTextField(10);
+        scaleColumn.setCellEditor(Application.getWidgetFactory().createCellEditor(limitedScaleField));
 
         tablePreferences.bind(table, null, null, null, model.nameColumnInd(), true);
     }
