@@ -14,6 +14,7 @@ Date:
 
 Bug Fixes:
 
+CAY-2320 Modeler: Limit input into numeric fields to 10 digits
 CAY-2449 Modeler: Needless scrollbar in Generate DB Schema result menu
 CAY-2450 Modeler: Impossible to update Attribute title after syncing ObjEntity
 CAY-2451 Modeler: ObjEntity "Edit" button doesn't open editor for Relationship
